<resources>
    <string name="app_name">TchatApp</string>
    <string name="username_hint">Your username</string>
    <string name="pwd_hint">Your password</string>
    <string name="connection">Connection</string>
    <string name="url_signin">http://cesi.cleverapps.io/signin</string>
    <string name="url_signup">http://cesi.cleverapps.io/signup</string>
    <string name="url_users" >http://cesi.cleverapps.io/users</string>
    <string name="url_notes" >http://cesi.cleverapps.io/notes</string>
    <string name="url_notes_update">http://cesi.cleverapps.io/notes/%1$s</string>


    <string name="error_login">Login failed. Please check your login and password</string>
    <string name="error_signup">Signup failed</string>
    <string name="tchat_message">Your message</string>
    <string name="tchat">Messages</string>
    <string name="users">Users</string>

    <string name="error_missing_msg">Missing message</string>
    <string name="error_send_msg">Error sending message</string>
    <string name="refresh">Refresh</string>
    <string name="register">Signup</string>
    <string name="error_no_token">No token. Can\'t display activity</string>
    <string name="settings">Settings</string>
    <string name="validate">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="url_photo">Url to a picture</string>
</resources>
