<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
    android:id="@+id/layout">

  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/card_padding"
      android:layout_margin="@dimen/card_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:id="@+id/signin_username"
                android:hint="@string/username_hint"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:singleLine="true"
                android:imeOptions="actionGo"
                android:id="@+id/signin_pwd"
                android:hint="@string/pwd_hint"/>

        </android.support.design.widget.TextInputLayout>





      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/connection"
          android:id="@+id/signin_btn"/>


      <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/signin_pg"
          android:visibility="gone"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/register"
          android:id="@+id/signin_register"
          android:background="@android:color/transparent"/>

    </LinearLayout>
  </android.support.v7.widget.CardView>
</LinearLayout>